--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-router": "^1.17.4",
+    "@tanstack/react-router": "^1.116.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "firebase": "^10.11.1",
-    "lucide-react": "^0.354.0",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
+    "firebase": "^11.6.0",
+    "lucide-react": "^0.488.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "sonner": "^1.4.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@tanstack/router-devtools": "^1.31.20",
-    "@tanstack/router-vite-plugin": "^1.16.5",
+    "@tanstack/react-router-devtools": "^1.116.0",
+    "@tanstack/router-plugin": "^1.116.1",
+    "@tanstack/router-vite-plugin": "^1.116.1",
     "@types/node": "^20.11.26",
-    "@types/react": "^18.2.64",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
+    "@vitejs/plugin-react": "^4.4.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -41,7 +41,7 @@
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.11"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.1"
   }
 }
