--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.2.2",
     "@tanstack/react-router": "^1.116.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
