--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-router-devtools": "^1.130.13",
     "@tanstack/router-plugin": "^1.116.1",
     "@tanstack/router-vite-plugin": "^1.116.1",
@@ -36,14 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "vite": "^7.1.9"
